# search

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
config/: ranking.json  sources.json
migrations/: 001_evidence_cache.sql
src/: config.py  db.py  embedder.py  main.py  safety.py  safety_state.py  user_db.py
src/analytics/: clinician.py  daily_checks.py  patterns.py  summary.py
src/api/: models.py  routes.py  stream.py
src/evidence/: search.py  sources.py
src/llm/: agent.py  agent_stream.py  summarize.py
src/search/: cache.py  hybrid.py  intent_classifier.py  keyword.py  live_fallback.py  local_qualifier.py  multilingual.py  query_transform.py  ranking.py  safety_expanded.py  semantic.py  site_search.py  trigger_policy.py
src/sources/: registry.py
src/tools/: search.py
