[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autism-search"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "openai>=1.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "eval_type_backport>=0.2; python_version < '3.10'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
